Fix not found css file

--- a/foodtaskerapp/templates/restaurant/home.html
+++ b/foodtaskerapp/templates/restaurant/home.html
@@ -8,7 +8,7 @@
     <title>Home - Food Delivery</title>
     {% load staticfiles %}
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/common.css' %}">
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
 </head>
 <body>
