--- a/foodtaskerapp/templates/restaurant/sign-up.html
+++ b/foodtaskerapp/templates/restaurant/sign-up.html
@@ -1,22 +1,15 @@
-{% load staticfiles %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home - Food Delivery</title>
-    {% load staticfiles %}
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/common.css' %}">
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-</head>
-<body>
+{% extends 'base_signup.html' %}
+{% load bootstrap3 %}
+
+{% block title %}Sign Up{% endblock %}
+{% block heading %}Restaurant - Sign Up{% endblock %}
+
+{% block content %}
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ user_form }}
-        {{ restaurant_form }}
-        <button type="submit">Sign Up</button>
+        {% bootstrap_form user_form %}
+        {% bootstrap_form restaurant_form %}
+        <button type="submit" class="btn btn-pink pull-right">Sign Up</button>
     </form>
-</body>
-</html>
+    <p><a href="{% url 'restaurant-sign-in' %}">Already Registered?</a></p>
+{% endblock %}
