--- a/foodtaskerapp/static/css/common.css
+++ b/foodtaskerapp/static/css/common.css
@@ -8,12 +8,16 @@ body {
     background-color: #3f3f63;
 }
 
+.text-white {
+    color: white;
+}
+
 .btn-pink {
     color: white;
     background-color: #ee5462;
 }
 
-.btn-pink:hover, .btt-pink:focus {
+.btn-pink:hover, .btn-pink:focus {
     color: white;
     background-color: #da4f5d;
 }
