--- a/foodtaskerapp/templates/base.html
+++ b/foodtaskerapp/templates/base.html
@@ -12,13 +12,12 @@
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
 </head>
 <body>
-
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-2 sidebar">
+            <div class="col-lg-2 col-md-2 col-sm-2 sidebar">
                 {% block sidebar %}{% endblock %}
             </div>
-            <div class="col-lg-10 col-md-10 col-sm-10 content">
+            <div class="col-lg-10 col-lg-offset-2 col-md-10 col-md-offset-2 col-sm-10 col-sm-offset-2 content">
                 {% block page %}{% endblock %}
             </div>
         </div>
