--- a/foodtaskerapp/templates/restaurant/meal.html
+++ b/foodtaskerapp/templates/restaurant/meal.html
@@ -1,4 +1,6 @@
 {% extends 'restaurant/base.html' %}
 
 {% block page %}
+    Meals Page
+    <p><a href="{% url 'restaurant-add-meal' %}" class="btn btn-pink">Add Meal</a></p>
 {% endblock %}
