--- a/foodtaskerapp/templates/restaurant/base.html
+++ b/foodtaskerapp/templates/restaurant/base.html
@@ -4,6 +4,13 @@
 {% block title %} Restaurant {% endblock %}
 
 {% block sidebar %}
+
+    {# for the active sidebar buttons #}
+    {% url 'restaurant-order' as order_url %}
+    {% url 'restaurant-meal' as meal_url %}
+    {% url 'restaurant-report' as report_url %}
+    {% url 'restaurant-account' as account_url %}
+
     <div class="text-center">
         <img
             class="img-circle"
@@ -20,14 +27,31 @@
         <span class="text-uppercase">
             Dashboard
         </span>
-        <a href="{% url 'restaurant-order' %}" class="list-group-item">Order</a>
-        <a href="{% url 'restaurant-meal' %}" class="list-group-item">Meals</a>
-        <a href="{% url 'restaurant-report' %}" class="list-group-item">Reports</a>
+        <a
+            href="{% url 'restaurant-order' %}"
+            class="list-group-item{% if request.path == order_url %} active{% endif %}"
+            >Order
+        </a>
+
+        <a
+            href="{% url 'restaurant-meal' %}"
+            class="list-group-item{% if request.path == meal_url %} active{% endif %}"
+            >Meals
+        </a>
+        <a
+            href="{% url 'restaurant-report' %}"
+            class="list-group-item{% if request.path == report_url %} active{% endif %}"
+            >Reports
+        </a>
 
         <span class="text-uppercase">
             Profile
         </span>
-        <a href="{% url 'restaurant-account' %}" class="list-group-item">Account</a>
+        <a
+            href="{% url 'restaurant-account' %}"
+            class="list-group-item{% if request.path == account_url %} active{% endif %}"
+            >Account
+        </a>
     </nav>
 
     <nav class="text-center">
