--- a/foodtaskerapp/templates/restaurant/edit-meal.html
+++ b/foodtaskerapp/templates/restaurant/edit-meal.html
@@ -3,7 +3,7 @@
 
 
 {% block page %}
-    <div class="col-lg-offset-2 col-lg-8">
+    <div class="col-lg-8 col-lg-offset-2">
         <div class="panel">
             <div class="panel-heading bg-blue">
                 <h4 class="panel-titlle-center text-white">
