--- a/foodtaskerapp/templates/base.html
+++ b/foodtaskerapp/templates/base.html
@@ -23,5 +23,7 @@
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    {% block script %}
+    {% endblock %}
 </body>
 </html>
