[Intentation] Remove extre newlines

--- a/foodtaskerapp/templates/restaurant/base.html
+++ b/foodtaskerapp/templates/restaurant/base.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
 
-
-{% block title %} Restaurant {% endblock %}
+{% block title %}Restaurant Delivery as a Service{% endblock %}
 
 {% block script %}
     <script>
