Add restaurant report chart
And refactore a bit the code, add util file to avoid duplicating code

--- a/foodtaskerapp/templates/restaurant/report.html
+++ b/foodtaskerapp/templates/restaurant/report.html
@@ -1,4 +1,68 @@
 {% extends 'restaurant/base.html' %}
 
+{% block script %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.0/Chart.bundle.js"></script>
+    <script>
+        var revenueChart = document.getElementById('revenue-chart').getContext('2d');
+        var data = {
+            labels: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun'],
+            datasets: [
+                {
+                    label: "Revenue per Week",
+                    backgroundColor: "rgba(54,162,235,0.9)",
+                    hoverBackgroundColor: "rgba(54,162,235,1)",
+                    data: {{ revenue }}
+                }
+            ]
+        };
+        new Chart(revenueChart, {
+            type: 'bar',
+            data: data
+        });
+
+        var orderChart = document.getElementById('order-chart').getContext('2d');
+        var data = {
+            labels: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun'],
+            datasets: [
+                {
+                    label: "Order per Week",
+                    backgroundColor: "rgba(255,99,132,0.9)",
+                    hoverBackgroundColor: "rgba(255,99,132,1)",
+                    data: {{ orders }}
+                }
+            ]
+        };
+        new Chart(orderChart, {
+            type: 'bar',
+            data: data
+        });
+    </script>
+{% endblock %}
+
 {% block page %}
+    <div class="row">
+        <div class="col-lg-8">
+            <div class="panel">
+                <div class="panel-heading bg-blue">
+                    <h4 class="panel-title text-center text-white">
+                        Revenue per Week
+                    </h4>
+                </div>
+                <div class="panel-body">
+                    <canvas id="revenue-chart" height="110"></canvas>
+                </div>
+            </div>
+
+            <div class="panel">
+                <div class="panel-heading bg-blue">
+                    <h4 class="panel-title text-center text-white">
+                        Order per Week
+                    </h4>
+                </div>
+                <div class="panel-body">
+                    <canvas id="order-chart" height="110"></canvas>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
