Add useful comment

--- a/foodtaskerapp/templates/restaurant/report.html
+++ b/foodtaskerapp/templates/restaurant/report.html
@@ -21,6 +21,7 @@
             data: data
         });
 
+        /** Order Chart **/
         var orderChart = document.getElementById('order-chart').getContext('2d');
         var data = {
             labels: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun'],
